	IndexOutOfBoundsException (kali via gates).

	PIG-59: Add a new ILLUSTRATE command (shubhamc via gates).

	PIG-203: Fix bug in parameter substitution code where any pig script over
	1k caused pig to freeze. (kali via gates)

	PIG-204: Repair broken input splits (acmurthy via gates).

	PIG-188: Fix mismatches between pig slicer changes and new streaming
	feature (acmurthy via gates).

	PIG-149, PIG-150:  Fix doc target so that ant can generate docs (xuzh via
	gates).

	PIG-183:  Catch when a UDF has been compiled with the wrong version of
	java and give a RuntimeException (pi_song via gates).

	PIG-114: store one alias/logicalPlan twice leads to instantiation of
	StoreFunc as LoadFunc (pi_song via gates).

	PIG-213: Remove non-static references to logger from data bags and tuples,
	as it causes significant overhead (vgeschel via gates).

	PIG-216: Fix streaming to work with commands that use unix pipes (acmurthy
	via gates).

	PIG-207: Fix illustrate command to work in mapreduce mode (shubhamc via
	gates).

    PIG-218: Fixed param generation to work with arbitrary commands

    PIG-220: Fixed definition of parameter name for param substitution

    PIG-151: fixes to code that handles bzip files

    PIG-222: fix build break

    PIG-226: fix for streaming optimization bug (acmurthy via olgan)

    PIG-228: make multiple streaming outputs adhere to spec (acmurthy via olgan)

    PIG-224: fix to error handling code to produce correct error code

	PIG-176: Change bag spilling so that bags below a certain threshold are
	not spilled, thus avoiding proliferation of small files (pi_song via
	gates).

    PIG-227: making load/store function optional in stream input/output spec
    (acmurthy via olgan)

    PIG-215: Cleanup a few dangling ends left by PIG-111 (pi_song via gates).
    
    PIG-229: Proper error handling in case of deserializer failure

	PIG-219: Change unit tests to run both local and map reduce modes (kali via gates).